# elgato-rust

./: Cargo.toml
src/: main.rs
